[package]
name = "actor-raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin for integration testing
name = "actor-raft"
path = "src/main.rs"


[lib] # raft lib
name = "actor_raft_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
#async-trait = "0.1.64"  # needed until async fn is supported in compiler
tonic = "0.8" # grpc client and server
prost = "0.11" # used for proto (de-)serialzation
serde = { version = "1.0.147", features = ["derive"] } # used for (de-)serialzation
#clap = {version ="4.0.23",features = ["derive"] } # cli parser
once_cell = "1.17.1" # used for static port counter in rpc unit tests


[build-dependencies]
tonic-build = "0.8"