[package]
name = "actor-raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] # raft lib
name = "actor_raft"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "sync", "time", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16" # only for applications will be used for integration test and example implementation
tracing-test = "0.2.4" # put tracing output to console in unit tests
#async-trait = "0.1.64"  # needed until async fn is supported in compiler
tonic = "0.8" # grpc client and server
prost = "0.11" # used for proto (de-)serialzation
serde = { version = "1.0.147", features = ["derive"] } # used for (de-)serialzation
futures-util = "0.3.28" # used to be able to use map on futures (e.g. for shutdown signal of tonic server)
#clap = {version ="4.0.23",features = ["derive"] } # cli parser
once_cell = "1.17.1" # used for static port counter in rpc unit tests
sled = "0.34.7" # embedded db
bincode = "1.3.3" # used to serialize entries to binary
rand = "0.8.5" # used to generate random election timeouts in a specific range


[build-dependencies]
tonic-build = "0.8"